QNetworkCookie: allow spaces in unquoted values

We should follow
http://tools.ietf.org/html/draft-ietf-httpstate-cookie-23 , which says
parse the value until reaching the next ';' or the end of the line.
Other cookie implementations allow spaces in unquoted values as well.

Reviewed-by: Martin Petersson
Task-number: QTBUG-18876

cregit: 863de43dcad501a6c9675823217d0abf0269f802 https://github.com/qt/qtbase/commit/863de43dcad501a6c9675823217d0abf0269f802